# Archphene

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  todo.md  tree.txt
.github/: dependabot.yml  pull_request_template.md
containers/: android-native.Containerfile  arm-runtime-builder.Containerfile  qt-platform-theme.Containerfile
docs/: 16kb-x86-runtime.md  README.md  android-capabilities.md  android-json-parser-bridge-emulator-results.md  app-private-home-bridge-emulator-results.md  app-spawned-syscall-probe-vm-results.md  appearance.md  architecture.md  archpheneos-feasibility.md  arm64-bridge-readiness.md  compatibility-matrix.md  day-one-compatibility-bridge.md  development.md  gpu-acceleration.md  implementation-gap-audit.md  launch-plumbing-vm-results.md  linux-manager-stub-vm-results.md  linux-visual-quality.md  mousepad-android-document-workflow.md  mousepad-arch-package-bridge-test.md  no-vm-linux-apps-as-android-apps.md  package-repositories.md  payload-staging-vm-results.md  permission-bridge-emulator-results.md  persisted-tree-background-bridge-emulator-results.md  project-status.md  releases.md  roadmap.md  security.md  split-storage-bridge-emulator-results.md  storage.md  terminal-apps.md  vscode-pacman-bridge-case-study.md  wayland-compositor-reference-review.md  zed-pacman-bridge-case-study.md
native/archphene-compositor/: Cargo.toml
native/archphene-compositor/.cargo/: config.toml
native/archphene-compositor/src/: archphene-us.xkb  lib.rs
research/: README.md
(+574 files in other folders)
