[package]
name = "archphene-compositor"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2"
wayland-server = "0.31.10"
wayland-protocols = { version = "0.32", features = ["server"] }

[profile.release]
lto = "thin"
panic = "abort"
strip = "symbols"
